# climate-data-cli

./: .gitignore  LICENSE  Pipfile  README.md  climate.py  environment.yml  pyproject.toml  requirements.txt  run_tests.py
guclimate/: __init__.py  __main__.py  cache.py  cds.py  cli.py  dataset.py  parse_input.py  requests.py  validate.py
guclimate/core/: dataset.py
guclimate/data/: arctic-ocean.geojson  land-sea-mask-2023-11.nc  land-sea_mask.nc.REMOVED.git-id
guclimate/process/: cli.py
guclimate/retrieve/: cli.py  parse_input.py  requests.py
sample-recipes/: get_daily_mean_temp_since_1940.yaml  get_december_mean_temp_since_1940.yaml  get_hourly_ocean_temp_since_1940.yaml  get_monthly_mean_temp_since_1940.yaml  get_monthly_temperature_anomalies_since_1979.yaml  get_monthly_temperature_anomalies_since_2020.yaml
src/guclimate/: __main__.py  cli.py
src/guclimate/core/: dataset.py  parse_input.py  recipe.py  requests.py  runner.py  ui.py
src/guclimate/process/: cli.py
src/guclimate/recipe/: cli.py
src/guclimate/recipes/: cli.py
src/guclimate/requests/: cli.py  download.py  transform.py  validate.py
src/guclimate/requests/shortcuts/: ecv.py
src/guclimate/retrieve/: cds.py  cli.py  parse_input.py  requests.py
src/guclimate/setup/: cli.py
tests/: test_dataset.py  test_parse_input.py  test_recipes.py  test_requests.py  test_retrieve.py
tests/data/precipitation/: anomalies-monthly-means-2022.nc.REMOVED.git-id
